# PIC-code

./: .gitmodules  readme.md
PIC3D/: CMakeLists.txt  main.cpp
PIC3D/BarycentricCoordinates/: BarycentricCoordinatesR3.hpp  CMakeLists.txt  HarmonicR3.cpp  HarmonicR3.h  LocalBarycentricCoordinatesR3.cpp  LocalBarycentricCoordinatesR3.h  MaximumEntropyCoordinatesR3.cpp  MaximumEntropyCoordinatesR3.h  MaximumLikelihoodCoordinatesR3.cpp  MaximumLikelihoodCoordinatesR3.h  MeanValueR3.cpp  MeanValueR3.h  PointwiseIterativeR3.cpp  PointwiseIterativeR3.h  TestBCR3.hpp
PIC3D/Basic/: CMakeLists.txt  Face.hpp  GBCmath.cpp  GBCmath.h  LoadandSave.cpp  LoadandSave.h  VertexR3.hpp
gbc-master/2d/: CMakeLists.txt  main.cpp
gbc-master/2d/coords/: HarmonicR2.hpp  IteractiveR2.cpp  IteractiveR2.h  LocalR2.hpp  MaximumEntropyR2.hpp  MaximumLikelihoodR2.cpp  MaximumLikelihoodR2.h  MeanValueR2.hpp  PointwiseIterativeR2.cpp  PointwiseIterativeR2.h  PointwiseIterativeR2_Scaled.cpp  PointwiseIterativeR2_Scaled.h  PositiveMeanValueR2.cpp  PositiveMeanValueR2.h  WachspressR2.hpp
gbc-master/2d/extra/: BarycentricCoordinatesR2.hpp  IsolinerR2.hpp  LoadandSave.cpp  LoadandSave.h  MeshR2.hpp  TestCoordinatesR2.hpp  TriangleCoordinatesR2.hpp  TriangulatorR2.hpp  VertexExpressionsR2.hpp  VertexR2.hpp  math.cpp  math.h
gbc-master/data/: I  L  M  S  X  bird  cactus  cat_polygon  convex_polygon  dragon  duobianxing2  duobianxing_polygon  guaishou  guaishou_deformed  guaishou_polygon_copy  haitun  hudie_polygon  liubianxing  non-manifold_iso_p  non-manifold_iso_p_lines  non-manifold_polygon  plane  poly_polygon  star  yazi_polygon
gbc-master/data/M_cd/: x
